objects/ListingFeature__c/ListingFeature__c.object-meta.xml
<CustomObject>
    <description>「どの部屋（Listing）」に「どの設備（Feature）」がついているか を管理する連結用オブジェクトです。</description>
    <label>住戸設備</label>
    <nameField>
        <displayFormat>LF-{00000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>