objects/ListingFeature__c/fields/BuildingName__c.field-meta.xml
<CustomField>
    <fullName>BuildingName__c</fullName>
    <formula>Listing__r.Building__r.Name</formula>
    <label>物件名</label>
    <type>Text</type>
</CustomField>