objects/ListingFeature__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>設備</label>
    <referenceTo>FeatureMaster__c</referenceTo>
    <relationshipLabel>住戸設備</relationshipLabel>
    <relationshipName>ListingFeatures_FeatureMaster</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>