objects/ListingFeature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BuildingName__c</columns>
    <columns>Listing__c</columns>
    <columns>Feature__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>